fix node names + refactor