@@ -3,22 +3,16 @@
 set -e
 
 # Ask for deployment type
-read -p "Deployment type - (l)ocal, (d)ocker, or (r)emote? " DEPLOY_TYPE
+read -p "Deployment type - (d)ocker or (r)emote? " DEPLOY_TYPE
 case "$DEPLOY_TYPE" in
-    [Ll]*)
-        LOCAL_DEPLOYMENT=true
-        DOCKER_DEPLOYMENT=false
-        ;;
     [Dd]*)
-        LOCAL_DEPLOYMENT=false
         DOCKER_DEPLOYMENT=true
         ;;
     [Rr]*)
-        LOCAL_DEPLOYMENT=false
         DOCKER_DEPLOYMENT=false
         ;;
     *)
-        echo "ERROR: Invalid deployment type. Use l, d, or r"
+        echo "ERROR: Invalid deployment type. Use d or r"
         exit 1
         ;;
 esac
@@ -38,29 +32,28 @@ if [[ ! "$SERVER_COUNT" =~ ^[0-9]+$ ]] || [[ $SERVER_COUNT -lt 1 ]]; then
 fi
 
 # SSH credentials prompting for Docker and Remote deployments
-if [[ "$DOCKER_DEPLOYMENT" == "true" ]] || [[ "$LOCAL_DEPLOYMENT" == "false" ]]; then
-    echo "=== SSH Credentials Configuration ==="
-    
-    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
-        echo "For Docker deployment, containers are accessed via localhost with these ports:"
-        echo "  - kafka-test-node1: localhost:2221"
-        echo "  - kafka-test-node2: localhost:2222" 
-        echo "  - kafka-test-node3: localhost:2223"
-        echo "Common SSH users: admin (default), root"
-    fi
-    
-    read -p "Enter SSH username for all servers: " SSH_USER
-    
-    # Validate SSH user input
-    if [[ -z "$SSH_USER" ]]; then
-        echo "ERROR: SSH username cannot be empty"
-        exit 1
-    fi
-    
-    echo "SSH username configured: $SSH_USER"
-    echo "Note: You will be prompted for the SSH password during deployment operations."
-    echo
+# SSH credentials prompting for all deployments
+echo "=== SSH Credentials Configuration ==="
+
+if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
+    echo "For Docker deployment, containers are accessed via localhost with these ports:"
+    echo "  - kafka-test-node1: localhost:2221"
+    echo "  - kafka-test-node2: localhost:2222" 
+    echo "  - kafka-test-node3: localhost:2223"
+    echo "Common SSH users: admin (default), root"
 fi
+
+read -p "Enter SSH username for all servers: " SSH_USER
+
+# Validate SSH user input
+if [[ -z "$SSH_USER" ]]; then
+    echo "ERROR: SSH username cannot be empty"
+    exit 1
+fi
+
+echo "SSH username configured: $SSH_USER"
+echo "Note: You will be prompted for the SSH password during deployment operations."
+echo
 
 # Server configuration based on deployment type
 if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
@@ -69,16 +62,13 @@ if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
     declare -a SSH_PORTS=("2221" "2222" "2223")
     declare -a HOSTNAMES=("kafka-node-1" "kafka-node-2" "kafka-node-3")
     declare -a IPS=("192.168.1.10" "192.168.1.11" "192.168.1.12")
-    LOCAL_FILES_PATH="/tmp/files"
-elif [[ "$LOCAL_DEPLOYMENT" == "false" ]]; then
-    # Remote deployment - use provided server details
-    declare -a HOSTNAMES=("kafka-node-1" "kafka-node-2" "kafka-node-3")
-    declare -a IPS=("192.168.1.10" "192.168.1.11" "192.168.1.12")
     LOCAL_FILES_PATH="/Users/alexk/pipelines/kafka-community-8/deployment-files"
 else
-    # Local deployment
-    declare -a HOSTNAMES=("kafka-node-1" "kafka-node-2" "kafka-node-3")  
-    declare -a IPS=("127.0.0.1" "127.0.0.1" "127.0.0.1")
+    # Remote deployment - use provided server details with standard SSH port
+    declare -a CONTAINER_NAMES=("kafka-test-node1" "kafka-test-node2" "kafka-test-node3")
+    declare -a SSH_PORTS=("22" "22" "22")
+    declare -a HOSTNAMES=("kafka-node-1" "kafka-node-2" "kafka-node-3")
+    declare -a IPS=("192.168.1.10" "192.168.1.11" "192.168.1.12")
     LOCAL_FILES_PATH="/Users/alexk/pipelines/kafka-community-8/deployment-files"
 fi
 
@@ -146,50 +136,37 @@ validate_prerequisites() {
         echo "WARNING: Running as root. This is not recommended."
     fi
     
-    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
-        echo "Docker deployment - validating container prerequisites..."
-        # Only check if Confluent ZIP exists in deployment-files
-        if [[ ! -f "/Users/alexk/pipelines/kafka-community-8/deployment-files/$CONFLUENT_ZIP" ]]; then
-            echo "ERROR: Confluent ZIP not found at /Users/alexk/pipelines/kafka-community-8/deployment-files/$CONFLUENT_ZIP"
-            exit 1
-        fi
-        
-        # Validate that containers have required utilities
-        echo "Checking if containers have required utilities..."
-        echo "Note: Since servers are air-gapped, all required utilities must be pre-installed"
-        echo "Required utilities: unzip, tar, sudo, groupadd, useradd"
-        
-        echo "Prerequisites validation completed successfully"
-        return 0
-    fi
-    
-    validate_java
-    
-    # Check installation files
+    # Check if Confluent ZIP exists in deployment-files
     if [[ ! -f "$LOCAL_FILES_PATH/$CONFLUENT_ZIP" ]]; then
         echo "ERROR: Confluent ZIP not found at $LOCAL_FILES_PATH/$CONFLUENT_ZIP"
         exit 1
     fi
     
-    if [[ ! -f "$LOCAL_FILES_PATH/$JDK_ARCHIVE" ]]; then
-        echo "ERROR: JDK archive not found at $LOCAL_FILES_PATH/$JDK_ARCHIVE"
-        exit 1
-    fi
+    # Validate that servers have required utilities
+    echo "Checking if servers have required utilities..."
+    echo "Note: Since servers are air-gapped, all required utilities must be pre-installed"
+    echo "Required utilities: unzip, tar, sudo, groupadd, useradd"
     
     echo "Prerequisites validation completed successfully"
 }
 
-# Build nodes array with environment substitution
+# Build nodes array with proper hostname handling
 NODES=()
 for i in "${!HOSTNAMES[@]}"; do
-    hostname=${HOSTNAMES[$i]//node/${ENVIRONMENT}-node}
-    NODES+=("$hostname")
+    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
+        # For Docker deployment, use actual container names
+        NODES+=("${CONTAINER_NAMES[$i]}")
+    else
+        # For remote deployment, use environment-specific hostnames
+        hostname=${HOSTNAMES[$i]//node/${ENVIRONMENT}-node}
+        NODES+=("$hostname")
+    fi
 done
 
 # Verify RHEL 8
 verify_os() {
-    if [[ "$LOCAL_DEPLOYMENT" == "true" ]]; then
-        echo "Local deployment - skipping OS verification"
+    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
+        echo "Docker deployment - skipping OS verification"
         return 0
     fi
     
@@ -201,23 +178,25 @@ verify_os() {
 
 # Test SSH connectivity
 test_ssh() {
-    if [[ "$LOCAL_DEPLOYMENT" == "true" ]]; then
-        echo "Local deployment - skipping SSH test"
-        return 0
-    fi
-    
-    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
-        echo "Testing Docker SSH connectivity..."
-        for i in "${!CONTAINER_NAMES[@]}"; do
-            if [[ $i -lt $SERVER_COUNT ]]; then
-                container_name=${CONTAINER_NAMES[$i]}
-                ssh_port=${SSH_PORTS[$i]}
-                node_name=${NODES[$i]}
-                
+    echo "Testing SSH connectivity..."
+    for i in "${!CONTAINER_NAMES[@]}"; do
+        if [[ $i -lt $SERVER_COUNT ]]; then
+            container_name=${CONTAINER_NAMES[$i]}
+            ssh_port=${SSH_PORTS[$i]}
+            node_name=${NODES[$i]}
+            
+            if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
                 echo "Testing SSH to $container_name via localhost:$ssh_port..."
-                
-                # Test SSH connection with password prompt
-                ssh -o ConnectTimeout=10 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port $SSH_USER@localhost "echo 'SSH OK to $container_name'" || {
+                ssh_target="localhost"
+            else
+                node_ip=${IPS[$i]}
+                echo "Testing SSH to $node_name ($node_ip:$ssh_port)..."
+                ssh_target="$node_ip"
+            fi
+            
+            # Test SSH connection with password prompt
+            ssh -o ConnectTimeout=10 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port $SSH_USER@$ssh_target "echo 'SSH OK to $container_name'" || {
+                if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
                     echo "ERROR: Cannot SSH to $container_name via localhost:$ssh_port"
                     echo "Please ensure:"
                     echo "  1. Container $container_name is running"
@@ -229,74 +208,20 @@ test_ssh() {
                     echo ""
                     echo "Or check container status with:"
                     echo "  ./manage-servers.sh status"
-                    exit 1
-                }
-                
-                # Test required utilities on each container
-                echo "  Testing required utilities on $container_name..."
-                ssh -o ConnectTimeout=10 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port $SSH_USER@localhost << 'UTILITY_CHECK'
-                    MISSING_UTILITIES=()
-                    
-                    if ! command -v unzip &> /dev/null; then
-                        MISSING_UTILITIES+=("unzip")
-                    fi
-                    
-                    if ! command -v tar &> /dev/null; then
-                        MISSING_UTILITIES+=("tar")
-                    fi
-                    
-                    if ! command -v sudo &> /dev/null; then
-                        MISSING_UTILITIES+=("sudo")
-                    fi
-                    
-                    if ! command -v groupadd &> /dev/null; then
-                        MISSING_UTILITIES+=("groupadd")
-                    fi
-                    
-                    if ! command -v useradd &> /dev/null; then
-                        MISSING_UTILITIES+=("useradd")
-                    fi
-                    
-                    if [[ ${#MISSING_UTILITIES[@]} -gt 0 ]]; then
-                        echo "ERROR: Required utilities missing on this container:"
-                        for util in "${MISSING_UTILITIES[@]}"; do
-                            echo "  - $util"
-                        done
-                        echo ""
-                        echo "This is an air-gapped deployment. All utilities must be pre-installed."
-                        exit 1
-                    fi
-                    
-                    echo "  ✅ All required utilities available on this container"
-UTILITY_CHECK
-            fi
-        done
-        echo "Docker SSH connectivity test completed successfully"
-        return 0
-    fi
-    
-    echo "Testing SSH connectivity to remote servers..."
-    for i in "${!NODES[@]}"; do
-        if [[ $i -lt $SERVER_COUNT ]]; then
-            node_name=${NODES[$i]}
-            node_ip=${IPS[$i]}
-            
-            echo "Testing SSH to $node_name ($node_ip)..."
-            
-            # Test SSH connection with password prompt for remote servers
-            ssh -o ConnectTimeout=10 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $SSH_USER@$node_ip "echo 'SSH OK to $node_name'" || {
-                echo "ERROR: Cannot SSH to $node_name ($node_ip)"
-                echo "Please ensure:"
-                echo "  1. SSH service is running on target host"
-                echo "  2. Host $node_ip is reachable"
-                echo "  3. Username '$SSH_USER' and password are correct"
-                echo "  4. SSH password authentication is enabled"
+                else
+                    echo "ERROR: Cannot SSH to $node_name ($node_ip:$ssh_port)"
+                    echo "Please ensure:"
+                    echo "  1. SSH service is running on target host"
+                    echo "  2. Host $node_ip is reachable"
+                    echo "  3. Username '$SSH_USER' and password are correct"
+                    echo "  4. SSH password authentication is enabled"
+                fi
                 exit 1
             }
             
-            # Test required utilities on remote server
-            echo "  Testing required utilities on $node_name..."
-            ssh -o ConnectTimeout=10 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $SSH_USER@$node_ip << 'UTILITY_CHECK'
+            # Test required utilities on each server/container
+            echo "  Testing required utilities on $container_name..."
+            ssh -o ConnectTimeout=10 -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port $SSH_USER@$ssh_target << 'UTILITY_CHECK'
                 MISSING_UTILITIES=()
                 
                 if ! command -v unzip &> /dev/null; then
@@ -333,10 +258,12 @@ UTILITY_CHECK
 UTILITY_CHECK
             
             # Verify OS for remote deployment
-            verify_os $node_ip
+            if [[ "$DOCKER_DEPLOYMENT" == "false" ]]; then
+                verify_os ${IPS[$i]}
+            fi
         fi
     done
-    echo "Remote SSH connectivity test completed successfully"
+    echo "SSH connectivity test completed successfully"
 }
 
 # Install on node
@@ -347,19 +274,17 @@ install_node() {
     
     echo "Installing Kafka on node $node_id..."
     
-    if [[ "$LOCAL_DEPLOYMENT" == "true" ]]; then
-        FILE_PREFIX="$LOCAL_FILES_PATH/"
-        EXEC_PREFIX=""
-        SUDO_CMD="sudo"
-    elif [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
+    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
         FILE_PREFIX="/tmp/"
         ssh_port=${SSH_PORTS[$((node_id-1))]}
-        EXEC_PREFIX="ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port root@localhost"
+        EXEC_PREFIX="ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port $SSH_USER@localhost"
         # For Docker deployment using root, no sudo needed
         SUDO_CMD=""
     else
         FILE_PREFIX="/tmp/"
-        EXEC_PREFIX="ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $SSH_USER@$node_ip"
+        node_ip=${IPS[$((node_id-1))]}
+        ssh_port=${SSH_PORTS[$((node_id-1))]}
+        EXEC_PREFIX="ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port $SSH_USER@$node_ip"
         SUDO_CMD="sudo"
     fi
     
@@ -495,7 +420,7 @@ install_node() {
         fi
         echo "Advertised hostname: \$ADVERTISED_HOSTNAME:\$ADVERTISED_PORT"
         
-        # Build quorum voters list - use container hostnames for Docker deployment
+        # Build quorum voters list - use correct hostnames for each deployment type
         QUORUM_VOTERS=""
         for ((j=1; j<=$SERVER_COUNT; j++)); do
             if [[ \$j -gt 1 ]]; then
@@ -507,6 +432,7 @@ install_node() {
                 container_hostname="kafka-test-node\${j}"
                 QUORUM_VOTERS="\${QUORUM_VOTERS}\${j}@\${container_hostname}:$CONTROLLER_PORT"
             else
+                # Use environment-specific hostnames for remote deployment
                 QUORUM_VOTERS="\${QUORUM_VOTERS}\${j}@kafka-${ENVIRONMENT}-node-\${j}:$CONTROLLER_PORT"
             fi
         done
@@ -609,237 +535,128 @@ EOF
 start_services() {
     echo "Starting Kafka services simultaneously..."
     
-    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
-        # Start all Docker nodes sequentially to avoid SSH password conflicts
-        for i in "${!NODES[@]}"; do
-            if [[ $i -ge $SERVER_COUNT ]]; then
-                continue
-            fi
-            
-            node_name=${NODES[$i]}
-            ssh_port=${SSH_PORTS[$i]}
-            
-            echo "Starting Kafka on $node_name..."
-            
-            # Start Kafka service on this node
-            ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=30 -p $ssh_port $SSH_USER@localhost << 'EOF'
-                # Find JDK directory
-                JDK_DIR=$(ls -d /opt/jdk-21* 2>/dev/null | head -1)
-                if [[ -n "$JDK_DIR" ]]; then
-                    export JAVA_HOME=$JDK_DIR
-                else
-                    echo "ERROR: Could not find JDK directory"
-                    exit 1
-                fi
-                
-                echo "Starting Kafka server..."
-                
-                # Start Kafka in background
-                if [[ -n "${SUDO_CMD}" ]]; then
-                    nohup ${SUDO_CMD:+$SUDO_CMD} -u kafka JAVA_HOME=$JAVA_HOME /opt/kafka/bin/kafka-server-start /opt/kafka/etc/kafka/server.properties > /var/log/confluent/kafka/kafka.log 2>&1 &
-                else
-                    # Running as root, use su to run as kafka user
-                    nohup su - kafka -s /bin/bash -c "JAVA_HOME=$JAVA_HOME /opt/kafka/bin/kafka-server-start /opt/kafka/etc/kafka/server.properties" > /var/log/confluent/kafka/kafka.log 2>&1 &
-                fi
-                
-                echo "Kafka startup command executed, waiting for service to initialize..."
-                sleep 5
-EOF
-            
-            if [ $? -eq 0 ]; then
-                echo "✅ Kafka startup command executed successfully on $node_name"
-            else
-                echo "❌ Failed to start Kafka on $node_name"
-                exit 1
-            fi
-        done
-        
-        echo "Waiting for all Kafka nodes to fully initialize..."
-        sleep 30
-        
-        # Check if all nodes are running - with retry logic
-        for i in "${!NODES[@]}"; do
-            if [[ $i -ge $SERVER_COUNT ]]; then
-                continue
-            fi
-            
-            node_name=${NODES[$i]}  
-            ssh_port=${SSH_PORTS[$i]}
-            
-            echo "Checking Kafka status on $node_name..."
-            
-            # Try to check status with retries
-            local check_retries=3
-            local check_attempt=1
-            local kafka_running=false
-            
-            while [ $check_attempt -le $check_retries ]; do
-                echo "  Status check attempt $check_attempt for $node_name..."
-                
-                if ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=15 -p $ssh_port $SSH_USER@localhost << 'EOF'; then
-                    for attempt in {1..10}; do
-                        if netstat -ln 2>/dev/null | grep -q ":9092.*LISTEN" || ss -ln 2>/dev/null | grep -q ":9092"; then
-                            echo "Kafka is listening on port 9092"
-                            exit 0
-                        fi
-                        
-                        if [ $attempt -eq 10 ]; then
-                            echo "Kafka not yet listening on port 9092 after 20 seconds"
-                            echo "Last 5 lines of Kafka log:"
-                            tail -5 /var/log/confluent/kafka/kafka.log 2>/dev/null || echo "No log file found"
-                            exit 1
-                        fi
-                        
-                        sleep 2
-                    done
-EOF
-                    kafka_running=true
-                    echo "✅ $node_name is running and listening on port 9092"
-                    break
-                else
-                    echo "  ⚠️  Status check attempt $check_attempt failed for $node_name"
-                    if [ $check_attempt -eq $check_retries ]; then
-                        echo "❌ Failed to verify Kafka status on $node_name after $check_retries attempts"
-                        echo "Attempting to get log information..."
-                        
-                        # Try one more time to get logs for troubleshooting
-                        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=10 -p $ssh_port $SSH_USER@localhost \
-                            "echo 'Kafka log tail:'; tail -10 /var/log/confluent/kafka/kafka.log 2>/dev/null || echo 'No log file found'" || echo "Could not retrieve logs"
-                        
-                        exit 1
-                    fi
-                    ((check_attempt++))
-                    sleep 10
-                fi
-            done
-        done
-        
-        return 0
-    fi
-    
+    # Start all nodes sequentially to avoid SSH password conflicts
     for i in "${!NODES[@]}"; do
         if [[ $i -ge $SERVER_COUNT ]]; then
             continue
         fi
         
-        node_ip=${IPS[$i]}
         node_name=${NODES[$i]}
+        ssh_port=${SSH_PORTS[$i]}
         
-        echo "Starting Kafka on $node_name..."
-        
-        if [[ "$LOCAL_DEPLOYMENT" == "true" ]]; then
-            # Local deployment - start Kafka directly
-            echo "Starting Kafka server on $(uname) with Java 21..."
-            
-            # Create startup script for reliable execution
-            cat > /tmp/start_kafka.sh << 'EOS'
-#!/bin/bash
-export JAVA_HOME="$JAVA_HOME_VAR"
-export PATH="$JAVA_HOME/bin:$PATH"
-cd /opt/kafka
-
-# Ensure logs directory exists
-mkdir -p logs
-
-# Start Kafka with Java 21 compatible options
-exec "$JAVA_HOME/bin/java" \
-    -Xmx1G -Xms1G \
-    -server \
-    -XX:+UseG1GC \
-    -XX:MaxGCPauseMillis=20 \
-    -XX:InitiatingHeapOccupancyPercent=35 \
-    -XX:+ExplicitGCInvokesConcurrent \
-    -Djava.awt.headless=true \
-    -Xlog:gc*:logs/kafkaServer-gc.log:time,tags \
-    -Dcom.sun.management.jmxremote \
-    -Dcom.sun.management.jmxremote.authenticate=false \
-    -Dcom.sun.management.jmxremote.ssl=false \
-    -Dkafka.logs.dir=logs \
-    -Dlog4j.configuration=file:etc/kafka/log4j.properties \
-    -cp "share/java/kafka/*:share/java/kafka-connect-api/*:share/java/kafka-connect-runtime/*:share/java/kafka-connect-storage-common/*:share/java/rest-utils/*:share/java/confluent-common/*:share/java/schema-registry/*:share/java/ksqldb-udf/*:share/java/ksqldb-streams-extensions/*:share/java/acl/*:share/java/kafka-connect-elastic/*:share/java/confluent-telemetry/*:share/java/support-metrics-client/*" \
-    kafka.Kafka \
-    etc/kafka/server.properties
-EOS
-            
-            # Replace JAVA_HOME_VAR in the script
-            sed -i '' "s|\$JAVA_HOME_VAR|$JAVA_HOME|g" /tmp/start_kafka.sh
-            chmod +x /tmp/start_kafka.sh
-            
-            # Start Kafka in background
-            sudo -u kafka /tmp/start_kafka.sh > "$LOG_DIR/kafka/kafka.log" 2>&1 &
-            local kafka_pid=$!
-            echo "Waiting for Kafka to initialize (PID: $kafka_pid)..."
-            
-            # Wait for Kafka to start listening
-            local max_attempts=30
-            local attempt=1
-            while [ $attempt -le $max_attempts ]; do
-                if netstat -ln 2>/dev/null | grep -q ":$PLAINTEXT_PORT.*LISTEN" || \
-                   lsof -i :$PLAINTEXT_PORT 2>/dev/null | grep -q LISTEN; then
-                    echo "Kafka started successfully and is listening on port $PLAINTEXT_PORT"
-                    break
-                fi
-                
-                if [ $attempt -eq $max_attempts ]; then
-                    echo "ERROR: Kafka failed to start within expected time"
-                    echo "Last 20 lines of Kafka log:"
-                    tail -20 "$LOG_DIR/kafka/kafka.log" 2>/dev/null || echo "No log file found"
-                    exit 1
-                fi
-                
-                sleep 2
-                ((attempt++))
-            done
-
+        if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
+            echo "Starting Kafka on $node_name via localhost:$ssh_port..."
+            ssh_target="localhost"
         else
-            # Production deployment - use systemd
-            ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $SSH_USER@$node_ip << 'EOF'
-                # Create systemd service
-                ${SUDO_CMD:+$SUDO_CMD} tee /etc/systemd/system/kafka.service > /dev/null << EOS
-[Unit]
-Description=Apache Kafka Server (KRaft Mode)
-Requires=network.target
-After=network.target
-
-[Service]
-Type=simple
-User=kafka
-Group=kafka
-Environment=JAVA_HOME=$JAVA_HOME
-ExecStart=/opt/kafka/bin/kafka-server-start /opt/kafka/etc/kafka/server.properties
-ExecStop=/opt/kafka/bin/kafka-server-stop
-Restart=on-abnormal
-RestartSec=30s
-
-[Install]
-WantedBy=multi-user.target
-EOS
-                
-                ${SUDO_CMD:+$SUDO_CMD} systemctl daemon-reload
-                ${SUDO_CMD:+$SUDO_CMD} systemctl enable kafka
-                ${SUDO_CMD:+$SUDO_CMD} systemctl start kafka
-                
-                # Wait for service to start
-                sleep 10
-                ${SUDO_CMD:+$SUDO_CMD} systemctl is-active kafka || {
-                    echo "ERROR: Kafka service failed to start"
-                    ${SUDO_CMD:+$SUDO_CMD} journalctl -u kafka --no-pager -l
-                    exit 1
-                }
-EOF
+            node_ip=${IPS[$i]}
+            echo "Starting Kafka on $node_name ($node_ip:$ssh_port)..."
+            ssh_target="$node_ip"
         fi
         
-        echo "Kafka server started successfully"
+        # Start Kafka service on this node
+        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=30 -p $ssh_port $SSH_USER@$ssh_target << 'EOF'
+            # Find JDK directory
+            JDK_DIR=$(ls -d /opt/jdk-21* 2>/dev/null | head -1)
+            if [[ -n "$JDK_DIR" ]]; then
+                export JAVA_HOME=$JDK_DIR
+            else
+                echo "ERROR: Could not find JDK directory"
+                exit 1
+            fi
+            
+            echo "Starting Kafka server..."
+            
+            # Start Kafka in background
+            if [[ -n "${SUDO_CMD}" ]]; then
+                nohup ${SUDO_CMD:+$SUDO_CMD} -u kafka JAVA_HOME=$JAVA_HOME /opt/kafka/bin/kafka-server-start /opt/kafka/etc/kafka/server.properties > /var/log/confluent/kafka/kafka.log 2>&1 &
+            else
+                # Running as root, use su to run as kafka user
+                nohup su - kafka -s /bin/bash -c "JAVA_HOME=$JAVA_HOME /opt/kafka/bin/kafka-server-start /opt/kafka/etc/kafka/server.properties" > /var/log/confluent/kafka/kafka.log 2>&1 &
+            fi
+            
+            echo "Kafka startup command executed, waiting for service to initialize..."
+            sleep 5
+EOF
+        
+        if [ $? -eq 0 ]; then
+            echo "✅ Kafka startup command executed successfully on $node_name"
+        else
+            echo "❌ Failed to start Kafka on $node_name"
+            exit 1
+        fi
     done
+    
+    echo "Waiting for all Kafka nodes to fully initialize..."
+    sleep 30
+    
+    # Check if all nodes are running - with retry logic
+    for i in "${!NODES[@]}"; do
+        if [[ $i -ge $SERVER_COUNT ]]; then
+            continue
+        fi
+        
+        node_name=${NODES[$i]}  
+        ssh_port=${SSH_PORTS[$i]}
+        
+        if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
+            ssh_target="localhost"
+        else
+            ssh_target=${IPS[$i]}
+        fi
+        
+        echo "Checking Kafka status on $node_name..."
+        
+        # Try to check status with retries
+        local check_retries=3
+        local check_attempt=1
+        local kafka_running=false
+        
+        while [ $check_attempt -le $check_retries ]; do
+            echo "  Status check attempt $check_attempt for $node_name..."
+            
+            if ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=15 -p $ssh_port $SSH_USER@$ssh_target << 'EOF'; then
+                for attempt in {1..10}; do
+                    if netstat -ln 2>/dev/null | grep -q ":9092.*LISTEN" || ss -ln 2>/dev/null | grep -q ":9092"; then
+                        echo "Kafka is listening on port 9092"
+                        exit 0
+                    fi
+                    
+                    if [ $attempt -eq 10 ]; then
+                        echo "Kafka not yet listening on port 9092 after 20 seconds"
+                        echo "Last 5 lines of Kafka log:"
+                        tail -5 /var/log/confluent/kafka/kafka.log 2>/dev/null || echo "No log file found"
+                        exit 1
+                    fi
+                    
+                    sleep 2
+                done
+EOF
+                kafka_running=true
+                echo "✅ $node_name is running and listening on port 9092"
+                break
+            else
+                echo "  ⚠️  Status check attempt $check_attempt failed for $node_name"
+                if [ $check_attempt -eq $check_retries ]; then
+                    echo "❌ Failed to verify Kafka status on $node_name after $check_retries attempts"
+                    echo "Attempting to get log information..."
+                    
+                    # Try one more time to get logs for troubleshooting
+                    ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=10 -p $ssh_port $SSH_USER@$ssh_target \
+                        "echo 'Kafka log tail:'; tail -10 /var/log/confluent/kafka/kafka.log 2>/dev/null || echo 'No log file found'" || echo "Could not retrieve logs"
+                    
+                    exit 1
+                fi
+                ((check_attempt++))
+                sleep 10
+            fi
+        done
+    done
+    
+    echo "Kafka services started successfully on all nodes"
 }
 
 # Copy files to nodes  
 copy_files() {
-    if [[ "$LOCAL_DEPLOYMENT" == "true" ]]; then
-        echo "Local deployment - files already available locally"
-        return 0
-    fi
-    
     echo "Copying installation files to all nodes..."
     
     # Define all required files
@@ -848,69 +665,49 @@ copy_files() {
         "jdk-21_linux-aarch64_bin.tar.gz"
     )
     
-    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
-        # Copy files to Docker containers via SSH - sequential to avoid password conflicts
-        echo "Copying files to Docker containers..."
-        
-        for i in "${!CONTAINER_NAMES[@]}"; do
-            if [[ $i -lt $SERVER_COUNT ]]; then
-                container_name=${CONTAINER_NAMES[$i]}
-                ssh_port=${SSH_PORTS[$i]}
-                
+    # Copy files to all servers/containers - sequential to avoid password conflicts
+    for i in "${!CONTAINER_NAMES[@]}"; do
+        if [[ $i -lt $SERVER_COUNT ]]; then
+            container_name=${CONTAINER_NAMES[$i]}
+            ssh_port=${SSH_PORTS[$i]}
+            node_name=${NODES[$i]}
+            
+            if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
                 echo "Copying files to $container_name via localhost:$ssh_port..."
+                ssh_target="localhost"
+            else
+                node_ip=${IPS[$i]}
+                echo "Copying files to $node_name ($node_ip:$ssh_port)..."
+                ssh_target="$node_ip"
+            fi
+            
+            for file in "${FILES_TO_COPY[@]}"; do
+                echo "  - Copying $file to $container_name..."
                 
-                for file in "${FILES_TO_COPY[@]}"; do
-                    echo "  - Copying $file to $container_name..."
-                    
-                    # Add retry logic for file copying
-                    local max_retries=3
-                    local retry=1
-                    
-                    while [ $retry -le $max_retries ]; do
-                        if scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=30 -P $ssh_port \
-                            "/Users/alexk/pipelines/kafka-community-8/deployment-files/$file" \
-                            $SSH_USER@localhost:/tmp/; then
-                            echo "    ✅ $file copied successfully (attempt $retry)"
-                            break
-                        else
-                            echo "    ⚠️  Copy attempt $retry failed for $file"
-                            if [ $retry -eq $max_retries ]; then
-                                echo "ERROR: Failed to copy $file to $container_name after $max_retries attempts"
-                                exit 1
-                            fi
-                            ((retry++))
-                            sleep 5
+                # Add retry logic for file copying
+                local max_retries=3
+                local retry=1
+                
+                while [ $retry -le $max_retries ]; do
+                    if scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -o ConnectTimeout=30 -P $ssh_port \
+                        "/Users/alexk/pipelines/kafka-community-8/deployment-files/$file" \
+                        $SSH_USER@$ssh_target:/tmp/; then
+                        echo "    ✅ $file copied successfully (attempt $retry)"
+                        break
+                    else
+                        echo "    ⚠️  Copy attempt $retry failed for $file"
+                        if [ $retry -eq $max_retries ]; then
+                            echo "ERROR: Failed to copy $file to $container_name after $max_retries attempts"
+                            exit 1
                         fi
-                    done
+                        ((retry++))
+                        sleep 5
+                    fi
                 done
-                echo "  ✅ All files copied successfully to $container_name"
-            fi
-        done
-        
-    else
-        # Copy files to remote servers - sequential to avoid password conflicts
-        echo "Copying files to remote servers..."
-        
-        for i in "${!IPS[@]}"; do
-            if [[ $i -lt $SERVER_COUNT ]]; then
-                ip=${IPS[$i]}
-                node_name=${NODES[$i]}
-                
-                echo "Copying files to $node_name ($ip)..."
-                
-                for file in "${FILES_TO_COPY[@]}"; do
-                    echo "  - Copying $file to $node_name..."
-                    scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null \
-                        "$LOCAL_FILES_PATH/$file" \
-                        $SSH_USER@$ip:/tmp/ || {
-                        echo "ERROR: Failed to copy $file to $ip"
-                        exit 1
-                    }
-                done
-                echo "  ✅ All files copied successfully to $node_name"
-            fi
-        done
-    fi
+            done
+            echo "  ✅ All files copied successfully to $container_name"
+        fi
+    done
     
     echo "✅ File copying completed successfully for all nodes"
 }
@@ -921,37 +718,33 @@ verify_cluster() {
     echo "Waiting for Kafka to fully initialize..."
     sleep 5
     
-    echo "Verifying cluster health..."
-    if [[ "$LOCAL_DEPLOYMENT" == "true" ]]; then
-        JAVA_HOME=$JAVA_HOME /opt/kafka/bin/kafka-broker-api-versions --bootstrap-server localhost:$PLAINTEXT_PORT > /dev/null 2>&1 || {
-            echo "ERROR: Cluster verification failed"
-            echo "Kafka logs:"
-            tail -20 "$LOG_DIR/kafka/kafka.log" 2>/dev/null || echo "No log file found"
-            exit 1
-        }
-        echo "✅ Kafka broker is responding"
-        
-        # Test cluster metadata
-        echo "Testing cluster metadata..."
-        JAVA_HOME=$JAVA_HOME /opt/kafka/bin/kafka-cluster --bootstrap-server localhost:$PLAINTEXT_PORT cluster-id > /dev/null 2>&1 || {
-            echo "WARNING: Could not retrieve cluster metadata, but broker is responding"
-        }
-        echo "✅ Cluster metadata is accessible"
-    elif [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
-        # Use the first container for cluster verification
-        ssh_port=${SSH_PORTS[0]}
-        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port $SSH_USER@localhost "JDK_DIR=\$(ls -d /opt/jdk-21* 2>/dev/null | head -1); JAVA_HOME=\$JDK_DIR /opt/kafka/bin/kafka-broker-api-versions --bootstrap-server kafka-${ENVIRONMENT}-node-1:$PLAINTEXT_PORT" || {
-            echo "ERROR: Cluster verification failed"
-            exit 1
-        }
-        echo "✅ Docker cluster is responding"
+    echo "Testing cluster connectivity..."
+    
+    # Use the first server/container for cluster verification
+    container_name=${CONTAINER_NAMES[0]}
+    ssh_port=${SSH_PORTS[0]}
+    first_node_hostname=${NODES[0]}
+    
+    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
+        echo "Testing Docker cluster connectivity..."
+        ssh_target="localhost"
     else
-        ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null $SSH_USER@${IPS[0]} "JAVA_HOME=$JAVA_HOME /opt/kafka/bin/kafka-broker-api-versions --bootstrap-server kafka-${ENVIRONMENT}-node-1:$PLAINTEXT_PORT" || {
-            echo "ERROR: Cluster verification failed"
-            exit 1
-        }
-        echo "✅ Production cluster is responding"
+        node_ip=${IPS[0]}
+        echo "Testing remote cluster connectivity..."
+        ssh_target="$node_ip"
     fi
+    
+    ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -p $ssh_port $SSH_USER@$ssh_target \
+        "JDK_DIR=\$(ls -d /opt/jdk-21* 2>/dev/null | head -1); JAVA_HOME=\$JDK_DIR /opt/kafka/bin/kafka-broker-api-versions --bootstrap-server $first_node_hostname:$PLAINTEXT_PORT" || {
+        echo "ERROR: Cluster verification failed"
+        echo "Troubleshooting steps:"
+        echo "  1. Check if Kafka services are running"
+        echo "  2. Verify network connectivity between nodes"
+        echo "  3. Check server logs for errors"
+        exit 1
+    }
+    
+    echo "✅ Cluster is responding successfully"
     
     echo "Cluster health verification completed successfully"
 }
@@ -976,14 +769,9 @@ echo "Phase 3: Copying installation files to all nodes..."
 copy_files
 
 echo "Phase 4: Generating shared cluster UUID and installing nodes..."
-# Generate shared cluster UUID for all nodes - use local generation or simple UUID
+# Generate shared cluster UUID for all nodes
 echo "Generating shared cluster UUID..."
-if [[ "$LOCAL_DEPLOYMENT" == "true" ]]; then
-    SHARED_CLUSTER_UUID=$(JAVA_HOME=$JAVA_HOME /opt/kafka/bin/kafka-storage random-uuid)
-else
-    # Generate a simple UUID for Docker and Remote deployments
-    SHARED_CLUSTER_UUID=$(uuidgen | tr '[:upper:]' '[:lower:]')
-fi
+SHARED_CLUSTER_UUID=$(uuidgen | tr '[:upper:]' '[:lower:]')
 echo "Shared cluster UUID: $SHARED_CLUSTER_UUID"
 export SHARED_CLUSTER_UUID
 
@@ -1008,7 +796,14 @@ for ((i=1; i<=SERVER_COUNT; i++)); do
     if [[ $i -gt 1 ]]; then
         BOOTSTRAP_LIST="${BOOTSTRAP_LIST},"
     fi
-    BOOTSTRAP_LIST="${BOOTSTRAP_LIST}kafka-${ENVIRONMENT}-node-${i}:$PLAINTEXT_PORT"
+    
+    if [[ "$DOCKER_DEPLOYMENT" == "true" ]]; then
+        # Use actual container hostnames for Docker deployment
+        BOOTSTRAP_LIST="${BOOTSTRAP_LIST}kafka-test-node${i}:$PLAINTEXT_PORT"
+    else
+        # Use environment-specific hostnames for remote deployment
+        BOOTSTRAP_LIST="${BOOTSTRAP_LIST}kafka-${ENVIRONMENT}-node-${i}:$PLAINTEXT_PORT"
+    fi
 done
 
 echo "Connection Details:"
